Revert "Alignment fix for letters with subscripts in Inequality"
This reverts commit ad516352cb68ad86ceb01b53021fef2e78737adc.

--- a/src/scss/common/inequality-modal.scss
+++ b/src/scss/common/inequality-modal.scss
@@ -310,12 +310,6 @@
                             }
                         }
 
-                        &.has-subscript {
-                            .katex span.base {
-                                line-height: 36px;
-                            }
-                        }
-
                         svg.v-hexagon {
                             position: absolute;
                             width: 64px;
